--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,10 @@
   </head>
   <body class="w-[500px] p-[20px]">
     <h1 class="text-xl font-bold text-center">Google AI Translator</h1>
+    <!-- <select name="lang" id="lang_select">
+      <option value="zh">中文</option>
+      <option value="en">英文</option>
+    </select> -->
     <div class="my-[20px]">
       <textarea
         id="inputOrigin"
